--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -19,7 +19,7 @@
 
       <div class="col-md-10">
 
-        <ng-container *ngIf="allIndents else emptyReports">
+        <ng-container *ngIf="(dataSource1 || dataSource2) else emptyReports">
 
           <ng-container class="user-dts">
             <mat-expansion-panel class="myPanel" [expanded]="true">
