--- a/src/app/features/dashboard/bom/bom-copy-materials/bom-copy-materials.component.html
+++ b/src/app/features/dashboard/bom/bom-copy-materials/bom-copy-materials.component.html
@@ -1,9 +1,9 @@
 <div class="page-start-point changeWidth mt-5 pt-4">
-    <div class="p-l-20 p-r-20 p-b-20">
+    <div class="p-l-20 p-r-20 p-b-20 copy-bom-materials-outer">
         <card-layout *ngIf="projectData" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"></card-layout>
 
-        <div class="row align-items-center">
-            <div class="col-xs-12 col-md-3">
+        <div class="row align-items-center copy-bom-small-screen">
+            <div class="col-xs-6 col-md-3 copy-bom-search-input">
                 <mat-form-field class="search-form-field border-input w-100">
                     <input matInput placeholder="Search Materials" type="search" (keyup)="applyFilter($event)" />
                     <button mat-button matSuffix mat-icon-button>
@@ -12,7 +12,7 @@
                 </mat-form-field>
             </div>
 
-            <div class="col-xs-12 col-md-3">
+            <div class="col-xs-6 col-md-3 copy-bom-select-project">
                 <mat-form-field class="border-select select-project-dropdown w-100">
                     <mat-label>Select Project</mat-label>
                     <mat-select>
@@ -32,7 +32,7 @@
                 </mat-form-field>
             </div>
 
-            <div class="col-xs-12 col-md-6 text-right">
+            <div class="col-xs-12 col-md-6 text-right copy-bom-button-action">
                 <button mat-raised-button class="main-background-color main-button color-white"
                     (click)="copySelectedMaterials()">Copy</button>
             </div>
