--- a/src/app/features/dashboard/bom/bom-topMaterial/bom-topMaterial.component.html
+++ b/src/app/features/dashboard/bom/bom-topMaterial/bom-topMaterial.component.html
@@ -2,125 +2,118 @@
   <ng-container formArrayName="forms">
     <span *ngFor="let category of selectedCategory; let c = index">
       <ng-container [formGroupName]="c">
-        <mat-accordion>
+        <mat-accordion class="bom-top-materials-lists">
           <div #myele *ngIf="!isSearching ? true : !category.allNull">
-            <mat-expansion-panel class="m-b-5 m-t-5 border-radius-panel bom-qty-page mat-expansion-panel-header-wrapper" [expanded]="true">
-              <mat-expansion-panel-header class="background-color-skyblue row">
-                <div class="col-xs-6">
-                  <mat-panel-title class="pull-left color-white">
-                    {{ category.groupName }}
-                  </mat-panel-title>
-                </div>
-                <div class="col-xs-2 p-r-30 color-white">
-                  <span class="pull-right">
-                    Unit
-                  </span>
-                </div>
-                <div class="col-xs-2">
-                  <span class="pull-right color-white">
-                    Estimated Quantity
-                  </span>
-                </div>
-                <div class="col-xs-2">
-                  <span class="pull-right color-white p-r-15">
-                    Estimated Rate
-                    <span class="display-block">({{ currencyCode }})</span>
-                  </span>
-                </div>
+            <mat-expansion-panel class="m-b-5 m-t-5 border-radius-panel bom-qty-page mat-expansion-panel-header-wrapper"
+              [expanded]="true">
+              <mat-expansion-panel-header class="mat-elevation-z8">
+                <mat-panel-title>{{ category.groupName }}</mat-panel-title>
               </mat-expansion-panel-header>
-              <ng-container formArrayName="materialGroup">
-                <div class="background-color-bom-sub-category" *ngFor="let subcategory of category.materialList; let sc = index" [formGroupName]="sc">
-                  <div class="row p-t-10" *ngIf="!subcategory.isNull">
-                    <div class="col-xs-3 p-t-10">
-                      <span class="pull-left p-l-25">{{ subcategory.materialName }}</span>
-                    </div>
-                    <div class="col-xs-3 p-t-10 text-center">
-                      <span class="text-semi-bold" *ngFor="let trades of subcategory.tradeList; let i = index">
-                        <span class="p-r-5">{{ trades }}<span *ngIf="subcategory.tradeList.length > 1 && i !== subcategory.tradeList.length - 1">,</span> </span>
-                      </span>
-                    </div>
-                    <div class="col-xs-2 text-right">
-                      <span
-                        *ngIf="
-                          (subcategory.requestedQuantity === 0 || subcategory.requestedQuantity === null) &&
-                            (subcategory.issueToProject === 0 || subcategory.issueToProject === null);
-                          else elseBlock
-                        "
-                      >
-                        <mat-form-field class="border-select width35Percent mat-form-field-padding mat-form-field-flex-mm-padding">
-                          <mat-select formControlName="materialUnit" placeholder="Unit">
-                            <div class="display-flex">
-                              <input
-                                class="p-l-10 p-b-5"
-                                matInput
-                                type="search"
-                                placeholder="Search Unit"
-                                [(ngModel)]="searchUnit"
-                                [ngModelOptions]="{standalone: true}"
-                                (keydown)="$event.stopPropagation()"
-                              />
-                              <button mat-button mat-icon-button>
-                                <mat-icon>search</mat-icon>
-                              </button>
-                            </div>
-                            <mat-option *ngFor="let unit of materialUnit | SearchPipe: searchUnit" [value]="unit">
-                              <span>
-                                {{ unit }}
-                              </span>
-                            </mat-option>
-                          </mat-select>
-                        </mat-form-field>
-                      </span>
-                      <ng-template #elseBlock>
-                        <div class="p-r-35 p-t-10">
-                          {{ subcategory.materialUnit }}
-                        </div>
-                      </ng-template>
-                    </div>
-                    <div class="col-xs-2 text-center p-l-25">
-                      <span>
-                        <mat-form-field class="border-input widthZero mat-form-field-padding">
-                          <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text" class="p-b-5 shortWidth" placeholder="Enter Quantity" />
-                        </mat-form-field>
-                      </span>
-                    </div>
-                    <div class="col-xs-2 text-center p-l-25">
-                      <span>
-                        <mat-form-field class="border-input widthZero mat-form-field-padding">
-                          <input formControlName="estimatedRate" appTwoDigitDecimaNumber matInput type="text" class="p-b-5 shortWidth" placeholder="Enter Rate" />
-                        </mat-form-field>
-                      </span>
-                    </div>
-                    <ng-container *ngIf="subcategory.Specs">
-                      <div class="row background-color-bom-sub-sub-category p-0" *ngFor="let material of subcategory.Specs">
-                        <div class="col-xs-6">
-                          <span class="pull-left p-l-60 p-t-20">{{ material.label }}</span>
-                        </div>
-                        <div class="col-xs-6">
-                          <span class="pull-right p-r-40">
-                            <!-- <mat-form-field class="full-border widthZero">
-                        <input matInput class="p-b-5 shortWidth" placeholder="eg. 1500" /><span
-                          class="p-b-15 p-l-5">{{subcategory.materialUnit}}</span>
-                      </mat-form-field> -->
 
-                            <mat-form-field class="border-input widthZero">
-                              <input
-                                matInput
-                                class="p-b-5 shortWidth"
-                                type="number"
-                                min="0"
-                                placeholder="Enter Quantity"
-                                onkeypress="return event.charCode >= 48 && event.charCode <= 57"
-                              />
-                              <span class="p-b-15 p-l-5">{{ subcategory.materialUnit }}</span>
+              <div class="bom-top-material-container mat-elevation-z8" style="overflow-x: auto; width: 100%;">
+
+                <table class="bom-select-material-table w-100">
+                  <tr matSort class="mat-elevation-z2 mat-header-row background-color-skyblue">
+                    <th class="mat-header-cell material-category">Material Name</th>
+                    <th class="mat-header-cell material-trade">Trade</th>
+                    <th class="mat-header-cell material-unit-col">Unit</th>
+                    <th class="mat-header-cell material-estimatedQty">
+                      Estimated <br />Quantity
+                    </th>
+                    <th class="mat-header-cell text-right estimated-rate-column-header">
+                      Estimated Rate
+                      <span class="display-block">({{ currencyCode }})</span>
+                    </th>
+                  </tr>
+
+                  <ng-container formArrayName="materialGroup">
+                    <tr class="mat-row bom-materials-row"
+                      *ngFor="let subcategory of category.materialList; let sc = index" [formGroupName]="sc">
+                      <ng-container class="" *ngIf="!subcategory.isNull">
+                        <td class="mat-cell material-category">{{ subcategory.materialName }}</td>
+
+                        <td class="mat-cell bom-selected-trades">
+                          <span class="text-semi-bold" *ngFor="let trades of subcategory.tradeList; let i = index">
+                            <span>{{ trades }}<span
+                                *ngIf="subcategory.tradeList.length > 1 && i !== subcategory.tradeList.length - 1">,
+                              </span> </span>
+                          </span>
+                        </td>
+
+                        <td class="mat-cell bom-materials-unit-column">
+                          <span *ngIf="
+                                (subcategory.requestedQuantity === 0 || subcategory.requestedQuantity === null) &&
+                                  (subcategory.issueToProject === 0 || subcategory.issueToProject === null);
+                                else elseBlock
+                              ">
+                            <mat-form-field
+                              class="border-select width35Percent bom-unit-col mat-form-field-padding mat-form-field-flex-mm-padding">
+                              <mat-select formControlName="materialUnit" placeholder="Unit">
+                                <div class="display-flex">
+                                  <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Unit"
+                                    [(ngModel)]="searchUnit" [ngModelOptions]="{standalone: true}"
+                                    (keydown)="$event.stopPropagation()" />
+                                  <button mat-button mat-icon-button>
+                                    <mat-icon>search</mat-icon>
+                                  </button>
+                                </div>
+                                <mat-option *ngFor="let unit of materialUnit | SearchPipe: searchUnit" [value]="unit">
+                                  <span>
+                                    {{ unit }}
+                                  </span>
+                                </mat-option>
+                              </mat-select>
                             </mat-form-field>
                           </span>
-                        </div>
-                      </div>
-                    </ng-container>
-                  </div>
-                </div>
-              </ng-container>
+                          <ng-template #elseBlock>
+                            <div class="p-r-35 p-t-10">
+                              {{ subcategory.materialUnit }}
+                            </div>
+                          </ng-template>
+                        </td>
+
+                        <td class="mat-cell bom-materials-qty-column">
+                          <mat-form-field class="border-input widthZero mat-form-field-padding bom-same-width-col">
+                            <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text"
+                              class="p-b-5 shortWidth" placeholder="Enter Quantity" />
+                          </mat-form-field>
+                        </td>
+
+                        <td class="mat-cell text-right estimated-rate-column">
+                          <span class="bom-estimated-rate-col">
+                            <mat-form-field class="border-input widthZero mat-form-field-padding bom-same-width-col">
+                              <input formControlName="estimatedRate" appTwoDigitDecimaNumber matInput type="text"
+                                class="p-b-5 shortWidth" placeholder="Enter Rate" />
+                            </mat-form-field>
+                          </span>
+                        </td>
+
+                        <ng-container *ngIf="subcategory.Specs">
+                          <div class="row background-color-bom-sub-sub-category p-0"
+                            *ngFor="let material of subcategory.Specs">
+                            <div class="col-xs-6">
+                              <span class="pull-left p-l-60 p-t-20">{{ material.label }}</span>
+                            </div>
+                            <div class="col-xs-6">
+                              <span class="pull-right p-r-40">
+                                <mat-form-field class="border-input widthZero">
+                                  <input matInput class="p-b-5 shortWidth" type="number" min="0"
+                                    placeholder="Enter Quantity"
+                                    onkeypress="return event.charCode >= 48 && event.charCode <= 57" />
+                                  <span class="p-b-15 p-l-5">{{ subcategory.materialUnit }}</span>
+                                </mat-form-field>
+                              </span>
+                            </div>
+                          </div>
+                        </ng-container>
+
+                      </ng-container>
+
+                    </tr>
+                  </ng-container>
+                </table>
+
+              </div>
             </mat-expansion-panel>
           </div>
         </mat-accordion>
