--- a/src/app/features/dashboard/bom/bom.component.html
+++ b/src/app/features/dashboard/bom/bom.component.html
@@ -1,164 +1,169 @@
 <div class="page-start-point changeWidth mt-5 pt-4">
-  <div class="p-l-20 p-r-20 p-b-20 p-t-20 min-height">
-    <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product" [disableEditDelete]="true"></card-layout>
-    <div class="p-t-10">
-      <mat-card class="parent">
-        <form [formGroup]="form">
-          <div class="row align-items-center row-sm-screen">
-            <!-- Left Side menus -->
-            <div class="col-md-6 text -left border-input col-left-width">
-              <div class="row align-items-center justify-content-between">
-                <!-- Search field -->
-                <mat-form-field class="input-search-padding-zero ptop-15 search-input-bom">
-                  <input #text matInput placeholder="Search Material" type="search" (input)="searchMaterial(text.value)" />
-                  <button mat-button matSuffix mat-icon-button>
-                    <mat-icon>search</mat-icon>
-                  </button>
-                </mat-form-field>
+  <div class="p-l-20 p-r-20 p-b-20 p-t-20 min-height bom-main-style">
+    <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product"
+      [disableEditDelete]="true"></card-layout>
 
-                <!-- Select Trades field -->
-                <mat-form-field class="border-select p-t-0 select-trades">
-                  <mat-label *ngIf="!formArray.length" class="mat-select-trades">Select Trades</mat-label>
-                  <mat-select formControlName="selectedTrades" multiple>
-                    <div class="display-flex">
-                      <input
-                        class="p-l-10 p-b-5"
-                        matInput
-                        type="search"
-                        placeholder="Search Trade"
-                        [(ngModel)]="searchTrade"
-                        [ngModelOptions]="{standalone: true}"
-                        (keydown)="$event.stopPropagation()"
-                      />
-                      <button mat-button matSuffix mat-icon-button>
-                        <mat-icon>search</mat-icon>
-                      </button>
-                    </div>
-                    <mat-select-trigger>
-                      <mat-label class="mat-select-trades">Select Trades</mat-label>
-                    </mat-select-trigger>
-                    <mat-option *ngFor="let trade of tradesList | SearchPipe: searchTrade:['tradeName']" [value]="trade" selected="trade.isAttatched" (click)="choosenTrade()"
-                      >{{ trade.tradeName }}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
+    <div class="add-to-bom-style p-t-10">
+      <!-- <div class="parent"> -->
+      <form [formGroup]="form">
+        <div class="row align-items-center row-sm-screen">
+          <!-- Left Side menus -->
+          <div class="col-md-6 text -left border-input col-left-width">
+            <div class="row align-items-center">
+              <!-- Search field -->
+              <mat-form-field class="input-search-padding-zero ptop-15 search-input-bom mr-4">
+                <input #text matInput placeholder="Search Material" type="search"
+                  (input)="searchMaterial(text.value)" />
+                <button mat-button matSuffix mat-icon-button>
+                  <mat-icon>search</mat-icon>
+                </button>
+              </mat-form-field>
+
+              <!-- Select Trades field -->
+              <mat-form-field class="border-select p-t-0 select-trades">
+                <mat-label *ngIf="!formArray.length" class="mat-select-trades">Select Trades</mat-label>
+                <mat-select formControlName="selectedTrades" multiple>
+                  <div class="display-flex">
+                    <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Trade"
+                      [(ngModel)]="searchTrade" [ngModelOptions]="{standalone: true}"
+                      (keydown)="$event.stopPropagation()" />
+                    <button mat-button matSuffix mat-icon-button>
+                      <mat-icon>search</mat-icon>
+                    </button>
+                  </div>
+                  <mat-select-trigger>
+                    <mat-label class="mat-select-trades">Select Trades</mat-label>
+                  </mat-select-trigger>
+                  <mat-option *ngFor="let trade of tradesList | SearchPipe: searchTrade:['tradeName']" [value]="trade"
+                    selected="trade.isAttatched" (click)="choosenTrade()">{{ trade.tradeName }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
             </div>
+          </div>
 
-            <!-- <div class="col-xs-3 text-right"> -->
-            <!-- <p>Please select categories to add materials in Bill of Materials</p> -->
-            <!-- </div> -->
+          <!-- <div class="col-xs-3 text-right"> -->
+          <!-- <p>Please select categories to add materials in Bill of Materials</p> -->
+          <!-- </div> -->
 
-            <!-- Right side menus -->
-            <div class="col-md-6 text-right d-flex justify-content-end col-right-width" appDnd>
-              <div class="row align-items-center justify-content-between">
-                <!-- Download BOM Link -->
-                <div class="mr-3 ptop-10">
+          <!-- Right side menus -->
+          <div class="col-md-6 text-right d-flex justify-content-end col-right-width" appDnd>
+            <div class="row align-items-center justify-content-between">
+              <!-- Download BOM Link -->
+              <div class="mr-3 ptop-10 download-bom-excel">
+                <ng-container *ngIf="innerWidth > 575; else downloadIconOnly">
                   <span class="cursor-pointer download-bom-template">
                     <img src="assets/images/download-bom.svg" alt="download" class="img-fluid mr-2 w-45" />
-                    <a (click)="downloadExcel('assets/images/bom_template.xlsx')"> Download BOM Template</a></span
-                  >
-                </div>
+                    <a (click)="downloadExcel('assets/images/bom_template.xlsx')"> Download BOM Excel</a>
+                  </span>
+                </ng-container>
+                
+                <ng-template #downloadIconOnly>
+                  <span class="cursor-pointer download-bom-template">
+                    <img src="assets/images/download-bom.svg" alt="download" class="img-fluid mr-2 w-45" 
+                    (click)="downloadExcel('assets/images/bom_template.xlsx')" />
+                  </span>
+                </ng-template>
+                
+              </div>
 
-                <!-- Upload BOM Link -->
-                <div class="mr-3 cursor-pointer ptop-15">
-                  <input
-                    type="file"
-                    accept=".xlsx"
-                    #fileDropRef
-                    id="fileDropRef"
-                    class="fileupload cursor-pointer"
-                    style="display: none;"
-                    multiple
-                    (change)="uploadExcel($event.target.files)"
-                  />
+              <!-- Upload BOM Link -->
+              <div class="mr-3 cursor-pointer ptop-15 upload-bom-excel">
+                <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer"
+                  style="display: none;" multiple (change)="uploadExcel($event.target.files)" />
+
+                <ng-container *ngIf="innerWidth > 575; else uploadIconOnly">
                   <label for="fileDropRef" class="cursor-pointer upload-template">
                     <img src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 w-45 cursor-pointer" />
-                    <a style="color: #222;">Upload BOM Template</a>
+                    <a style="color: #222;">Upload BOM Excel</a>
                   </label>
-                </div>
+                </ng-container>
 
-                <!-- Add to BOM Button -->
-                <div>
-                  <button
-                    mat-raised-button
-                    class="main-background-color main-button color-white pull-right save-material-button"
-                    (click)="saveCategory()"
-                    [disabled]="
-                      this.currentIndex == 0
-                        ? this.topMaterial && this.topMaterial.quantityForms
-                          ? this.topMaterial.quantityForms.invalid
-                          : true
-                        : this.currentIndex == 1
-                        ? this.allMaterial && this.allMaterial.quantityForms
-                          ? this.allMaterial.quantityForms.invalid
-                          : true
-                        : this.currentIndex == 2
-                        ? this.myMaterial && this.myMaterial.quantityForms
-                          ? this.myMaterial.quantityForms.invalid
-                          : true
-                        : true
-                    "
-                  >
-                    Add to BOM
-                  </button>
-                </div>
+                <ng-template #uploadIconOnly>
+                  <img src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 w-45 cursor-pointer" />
+                </ng-template>
+              
               </div>
-            </div>
-          </div>
-        </form>
-        <div class="row">
-          <div class="col-md-9 display-flex m-t-20 col-left-width-9">
-            <div class="m-b-10 m-r-10" *ngFor="let trades of tradeNames">
-              <mat-card class="p-l-10 p-r-10 p-t-5 p-b-5 font-size14 background-color-skyblue color-white">{{ trades }} </mat-card>
-            </div>
-          </div>
-          <div class="col-md-3 col-right-width-3 p-t-20 d-flex align-items-center justify-content-between">
-            <!-- Copy Materials Link -->
-            <a href="javascript:void(0)" class="main-color text-semi-bold" [routerLink]="['/project-dashboard/bom/' + projectId + '/copy-materials']">
-              Copy Materials
-            </a>
 
-            <!-- Add Custom Material Link -->
-            <a href="javascript:void(0)" class="main-color text-semi-bold" (click)="openAddMyMaterial()">+ Add Custom Material</a>
+              <!-- Add to BOM Button -->
+              <div class="add-bom-button">
+                <button mat-raised-button
+                  class="main-background-color main-button color-white pull-right save-material-button"
+                  (click)="saveCategory()" [disabled]="
+                    this.currentIndex == 0
+                      ? this.topMaterial && this.topMaterial.quantityForms
+                        ? this.topMaterial.quantityForms.invalid
+                        : true
+                      : this.currentIndex == 1
+                      ? this.allMaterial && this.allMaterial.quantityForms
+                        ? this.allMaterial.quantityForms.invalid
+                        : true
+                      : this.currentIndex == 2
+                      ? this.myMaterial && this.myMaterial.quantityForms
+                        ? this.myMaterial.quantityForms.invalid
+                        : true
+                      : true
+                  ">
+                  Add to BOM
+                </button>
+              </div>
+
+              <!-- Copy and Add Custom Material Dropdown -->
+              <div class="copy-and-add-materials">
+                <button mat-button [matMenuTriggerFor]="menu">
+                  <span class="material-icons">menu</span>
+                </button>
+                <mat-menu #menu="matMenu" class="copy-and-add-materials-menus">
+                  <button mat-menu-item (click)="openAddMyMaterial()">Add Custom Material</button>
+                  <button mat-menu-item [routerLink]="['/project-dashboard/bom/' + projectId + '/copy-materials']">Copy Material</button>
+                </mat-menu>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </form>
+      
+      <div class="row">
+        <div class="col-md-9 display-flex m-t-20 col-left-width-9">
+          <div class="m-b-10 m-r-10" *ngFor="let trades of tradeNames">
+            <mat-card class="p-l-10 p-r-10 p-t-5 p-b-5 font-size14 background-color-skyblue color-white">{{ trades }}
+            </mat-card>
           </div>
         </div>
 
-        <div *ngIf="showTable">
-          <mat-tab-group (selectedTabChange)="tabClick($event)">
-            <mat-tab label="Top Materials">
-              <app-bom-topMaterial
-                *ngIf="showTopMaterial"
-                #preview
-                [category]="topMaterialData"
-                [searchMat]="searchAgain"
-                (searchData)="searchData($event)"
-                (inputEntered)="checkValidations($event)"
-              ></app-bom-topMaterial
-            ></mat-tab>
-            <mat-tab label="All Materials"
-              ><app-bom-allMaterial
-                *ngIf="showAllMaterial"
-                #preview1
-                [category]="allMaterialData"
-                [searchMat]="searchAgain"
-                (searchData)="searchData($event)"
-                (inputEntered)="checkValidationsAll($event)"
-              ></app-bom-allMaterial
-            ></mat-tab>
-            <mat-tab label="My Materials"
-              ><app-bom-myMaterial
-                *ngIf="showMyMaterial"
-                #preview2
-                [category]="myMaterialData"
-                [searchMat]="searchAgain"
-                (searchData)="searchData($event)"
-                (inputEntered)="checkValidationsAll($event)"
-              ></app-bom-myMaterial
-            ></mat-tab>
-          </mat-tab-group>
-        </div>
-      </mat-card>
+        <!-- <div class="col-md-3 col-right-width-3 p-t-20 d-flex align-items-center justify-content-between"> -->
+          <!-- Copy Materials Link -->
+          <!-- <a href="javascript:void(0)" class="main-color text-semi-bold"
+            [routerLink]="['/project-dashboard/bom/' + projectId + '/copy-materials']">
+            Copy Materials
+          </a> -->
+
+          <!-- Add Custom Material Link -->
+          <!-- <a href="javascript:void(0)" class="main-color text-semi-bold" (click)="openAddMyMaterial()">+ Add Custom
+            Material</a>
+        </div> -->
+      </div>
+
+      <div *ngIf="showTable">
+        <mat-tab-group (selectedTabChange)="tabClick($event)">
+          <mat-tab label="Top Materials">
+            <app-bom-topMaterial *ngIf="showTopMaterial" #preview [category]="topMaterialData"
+              [searchMat]="searchAgain" (searchData)="searchData($event)" (inputEntered)="checkValidations($event)">
+            </app-bom-topMaterial>
+          </mat-tab>
+          <mat-tab label="All Materials">
+            <app-bom-allMaterial *ngIf="showAllMaterial" #preview1 [category]="allMaterialData"
+              [searchMat]="searchAgain" (searchData)="searchData($event)"
+              (inputEntered)="checkValidationsAll($event)"></app-bom-allMaterial>
+          </mat-tab>
+          <mat-tab label="My Materials">
+            <app-bom-myMaterial *ngIf="showMyMaterial" #preview2 [category]="myMaterialData" [searchMat]="searchAgain"
+              (searchData)="searchData($event)" (inputEntered)="checkValidationsAll($event)"></app-bom-myMaterial>
+          </mat-tab>
+        </mat-tab-group>
+      </div>
+      <!-- </div> -->
     </div>
   </div>
 </div>
