--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -1,7 +1,8 @@
 <ng-container *ngIf="type === '2'">
-  <mat-card class="box-shadow" [ngClass]="isMobile ? 'p-10' : 'm-t-5 m-b-10' ">
-    <mat-card-content class="mat-card-content card-project-dashboard">
+  <mat-card class="box-shadow outside" [ngClass]="isMobile ? 'p-10' : 'm-t-5 m-b-10' ">
+    <mat-card-content class="mat-card-content card-project-dashboard project-info-section">
       <div class="row">
+
         <div class="col-lg-2 image-big-screen">
           <img class="radius-10 project-item-image" *ngIf="projectDetails.imageUrl" [src]="projectDetails.imageUrl"
             alt="project image" />
@@ -9,11 +10,13 @@
             [src]="'../../../../assets/images/project-default-image.png'" alt="project image" />
         </div>
 
-        <div class="col-lg-10 col-md-12 col-xs-12 card-project-dialog">
+        <div class="col-lg-10 col-md-12 col-xs-12 card-project-dialog project-info-card">
           <div class="row">
             <div [ngClass]="isMobile ? 'pl-3 col-xs-12' : 'col-xs-10' ">
               <div class="row">
-                <div class="col-xs-3 image-small-screen">
+
+                <!-- Project Image -->
+                <div class="col-md-3 col-xs-3 image-small-screen">
                   <div>
                     <img class="image-project-card" *ngIf="projectDetails.imageUrl" [src]="projectDetails.imageUrl"
                       alt="project image" />
@@ -21,10 +24,11 @@
                       [src]="'../../../../assets/images/project-default-image.png'" alt="project image" />
                   </div>
                 </div>
-                <div class="col-xs-9" [ngClass]="isMobile ? 'pl-3' : 'p-l-25' ">
+
+                <!-- Project Other info -->
+                <div class="col-md-9 col-xs-9" [ngClass]="isMobile ? 'pl-3' : 'p-l-25' ">
                   <div class="text-bold">
-                    <span class="main-color card-project-name"
-                      href="javascript:void(0)">{{ projectDetails.projectName }}</span>
+                    <span class="main-color card-project-name" href="javascript:void(0)">{{ projectDetails.projectName }}</span>
                   </div>
 
                   <div class="row">
@@ -76,15 +80,6 @@
                   </div>
                 </div>
               </div>
-
-
-
-
-              <!-- <div class="row">
-                      <div class=" col-xs-6 display-flex">
-                          <div class="font-size12 color-text-card text-left width50Percent"><i class="material-icons font-size12 color-text-card">room</i> <span>{{projectDetails.addressLine2}}</span></div>
-                      </div>    
-                    </div> -->
             </div>
 
             <div class="col-xs-2 text-right">
@@ -101,22 +96,18 @@
                   <img src="../../../../assets/images/delete-button.png" />
                 </a>
               </div>
-              <!-- <a href="javascript:void(0)"
-                ><i class="material-icons main-color">file_copy</i></a
-              > -->
-
             </div>
           </div>
 
 
-
           <div class="row tiles" [ngClass]="isMobile ? 'mt-2' : 'm-t-20' ">
 
-            <div class="col-xs-4 col-sm-4 col-md-3 display-material-indent-po-box">
-              <div class="box-custom color-text-card cursor-pointer showAllMaterials"
+            <div class="col-xs-6 col-sm-4 col-md-3 display-material-indent-po-box">
+              <div class="box-custom color-text-card cursor-pointer showAllMaterials material-details-box"
                 (click)="navigationToBOM(projectDetails.projectId, projectDetails)" matTooltip="View All Materials"
                 [ngClass]="isMobile ? 'pl-2' : 'p-t-10 display-flex' ">
-                <div class="font-size20 text-bold">
+
+                <div class="font-size20 text-bold card-counts">
                   <span *ngIf="projectDetails.matCount" class="max-width-96 word-break-word">
                     {{ projectDetails.matCount }}
                   </span>
@@ -124,7 +115,8 @@
                     0
                   </span>
                 </div>
-                <div [ngClass]="isMobile ? 'font-size11 line-height-1' : 'p-l-15 p-t-5 font-size12' ">
+                
+                <div class="card-info" [ngClass]="isMobile ? 'font-size11 line-height-1' : 'p-l-15 p-t-5 font-size12' ">
                   <div class="max-width-96 word-break-word">
                     All Materials
                   </div>
@@ -132,12 +124,12 @@
               </div>
             </div>
 
-
-            <div class="col-xs-4 col-sm-4 col-md-3  display-material-indent-po-box">
-              <div class="box-custom color-text-card cursor-pointer showOpenIndents"
+            <div class="col-xs-6 col-sm-4 col-md-3  display-material-indent-po-box">
+              <div class="box-custom color-text-card cursor-pointer showOpenIndents material-details-box"
                 (click)="redirectToOpenIndentCount(projectDetails.projectId, projectDetails)"
                 matTooltip="View All Open Purchase Requisition" [ngClass]="isMobile ? 'pl-2' : 'p-t-10 display-flex' ">
-                <div class="font-size20 text-bold">
+
+                <div class="font-size20 text-bold card-counts">
                   <span *ngIf="!projectDetails.openIndentCount" class="max-width-96 word-break-word">
                     0
                   </span>
@@ -145,7 +137,8 @@
                     {{ projectDetails.openIndentCount }}
                   </span>
                 </div>
-                <div class="color-text-card"
+
+                <div class="color-text-card card-info"
                   [ngClass]="isMobile ? 'font-size11 line-height-1' : 'p-l-15 p-t-5 font-size12' ">
                   <div class="max-width-96 word-break-word">
                     Open Purchase Requisition
@@ -154,24 +147,25 @@
               </div>
             </div>
 
-
-
-            <div class="col-xs-4 col-sm-4 col-md-3 display-material-indent-po-box">
+            <div class="col-xs-6 col-sm-4 col-md-3 display-material-indent-po-box last-material-box">
               <div *ngIf="permissionObj.purchaseOrderFlag"
-                class="box-custom color-text-card cursor-pointer showOpenIndents" (click)="redirectToPurchaseOrder()"
+                class="box-custom color-text-card cursor-pointer showOpenIndents material-details-box" (click)="redirectToPurchaseOrder()"
                 matTooltip="View All Purchase Orders" [ngClass]="isMobile ? 'pl-2' : 'p-t-10 display-flex' ">
-                <div class="font-size20 color-text-card text-bold">
+
+                <div class="font-size20 color-text-card text-bold card-counts">
                   <span *ngIf="projectDetails.purchaseOrderCount" class="max-width-96 word-break-word">
                     {{ projectDetails.purchaseOrderCount }}
                   </span>
                   <span *ngIf="!projectDetails.purchaseOrderCount" class="max-width-96 word-break-word">
                     0
                   </span>
+                </div>
+
+                <div class="color-text-card card-info" [ngClass]="isMobile ? 'font-size11' : 'p-l-15 p-t-5 font-size12'">
                   <ng-container *ngIf="isMobile">
                     <span class="font-weight-normal font-size12">PO</span>
                   </ng-container>
-                </div>
-                <div class="color-text-card" [ngClass]="isMobile ? 'font-size11' : 'p-l-15 p-t-5 font-size12' ">
+
                   <ng-container *ngIf="!isMobile">
                     <div class="max-width-96 word-break-word">
                       Purchase Orders
@@ -203,8 +197,6 @@
 
             <div class="col-md-3 "></div>
 
-
-
           </div>
 
           <div class="row m-t-10">
@@ -229,8 +221,8 @@
 
 
 <ng-container *ngIf="type !== '2'">
-  <mat-card class="box-shadow" [ngClass]="isMobile ? 'p-10' : 'm-t-5 m-b-10' ">
-    <mat-card-content class="mat-card-content card-project-dashboard">
+  <mat-card class="box-shadow inside" [ngClass]="isMobile ? 'p-10' : 'm-t-5 m-b-10' ">
+    <mat-card-content class="mat-card-content card-project-dashboard project-info-section">
       <div class="row">
         <div class="col-lg-2 image-big-screen">
           <img class="radius-10 project-item-image" *ngIf="projectDetails.imageUrl" [src]="projectDetails.imageUrl"
@@ -239,7 +231,7 @@
             [src]="'../../../../assets/images/project-default-image.png'" alt="project image" />
         </div>
 
-        <div class="col-lg-10 col-md-12 col-xs-12 card-project-dialog">
+        <div class="col-lg-10 col-md-12 col-xs-12 card-project-dialog project-info-card">
           <div class="row">
             <div class="col-xs-10" [ngClass]="isMobile ? 'pl-3' : '' ">
               <div class="row">
@@ -334,10 +326,10 @@
           <div class="row tiles" [ngClass]="isMobile ? 'mt-2' : 'm-t-20' ">
 
             <div class="col-xs-6 col-sm-4 col-md-3 display-material-indent-po-box">
-              <div class="box-custom color-text-card cursor-pointer showAllMaterials"
+              <div class="box-custom color-text-card cursor-pointer showAllMaterials material-details-box"
                 (click)="navigationToBOM(projectDetails.projectId, projectDetails)" matTooltip="View All Materials"
                 [ngClass]="isMobile ? 'pl-2' : 'p-t-10 display-flex' ">
-                <div class="font-size20 text-bold">
+                <div class="font-size20 text-bold card-counts">
                   <span *ngIf="projectDetails.matCount" class="max-width-96 word-break-word">
                     {{ projectDetails.matCount }}
                   </span>
@@ -345,7 +337,8 @@
                     0
                   </span>
                 </div>
-                <div [ngClass]="isMobile ? 'font-size11 line-height-1' : 'p-l-15 p-t-5 font-size12' ">
+
+                <div class="card-info" [ngClass]="isMobile ? 'font-size11 line-height-1' : 'p-l-15 p-t-5 font-size12' ">
                   <div class="max-width-96 word-break-word">
                     All Materials
                   </div>
@@ -355,10 +348,10 @@
 
 
             <div class="col-xs-6 col-sm-4 col-md-3  display-material-indent-po-box">
-              <div class="box-custom color-text-card cursor-pointer showOpenIndents"
+              <div class="box-custom color-text-card cursor-pointer showOpenIndents material-details-box"
                 (click)="redirectToOpenIndentCount(projectDetails.projectId, projectDetails)"
                 matTooltip="View All Open Purchase Requisition" [ngClass]="isMobile ? 'pl-2' : 'p-t-10 display-flex' ">
-                <div class="font-size20 text-bold">
+                <div class="font-size20 text-bold card-counts">
                   <span *ngIf="!projectDetails.openIndentCount" class="max-width-96 word-break-word">
                     0
                   </span>
@@ -366,7 +359,7 @@
                     {{ projectDetails.openIndentCount }}
                   </span>
                 </div>
-                <div class="color-text-card"
+                <div class="color-text-card card-info"
                   [ngClass]="isMobile ? 'font-size11 line-height-1' : 'p-l-15 p-t-5 font-size12' ">
                   <div class="max-width-96 word-break-word">
                     Open Purchase Requisition
@@ -377,27 +370,32 @@
 
 
 
-            <div class="col-xs-6 col-sm-4 col-md-3 display-material-indent-po-box" [ngClass]="isMobile ? ' mt-3' : '' ">
+            <div class="col-xs-6 col-sm-4 col-md-3 display-material-indent-po-box last-material-box" [ngClass]="isMobile ? ' mt-3' : '' ">
               <div *ngIf="permissionObj.purchaseOrderFlag"
-                class="box-custom color-text-card cursor-pointer showOpenIndents" (click)="redirectToPurchaseOrder()"
+                class="box-custom color-text-card cursor-pointer showOpenIndents material-details-box" (click)="redirectToPurchaseOrder()"
                 matTooltip="View All Purchase Orders" [ngClass]="isMobile ? 'pl-2' : 'p-t-10 display-flex' ">
-                <div class="font-size20 color-text-card text-bold">
+
+                <div class="font-size20 color-text-card text-bold card-counts">
                   <span *ngIf="projectDetails.purchaseOrderCount" class="max-width-96 word-break-word">
                     {{ projectDetails.purchaseOrderCount }}
                   </span>
                   <span *ngIf="!projectDetails.purchaseOrderCount" class="max-width-96 word-break-word">
                     0
                   </span>
+                </div>
+
+                <div class="color-text-card card-info" [ngClass]="isMobile ? 'font-size11' : 'p-l-15 p-t-5 font-size12' ">
+
                   <ng-container *ngIf="isMobile">
                     <span class="font-weight-normal font-size12">PO</span>
                   </ng-container>
-                </div>
-                <div class="color-text-card" [ngClass]="isMobile ? 'font-size11' : 'p-l-15 p-t-5 font-size12' ">
+
                   <ng-container *ngIf="!isMobile">
                     <div class="max-width-96 word-break-word">
                       Purchase Orders
                     </div>
                   </ng-container>
+
                   <div>
                     <span class="max-width-96 word-break-word" *ngIf="projectDetails.purchaseOrderCost"
                       [ngClass]="isMobile ? 'font-size11 line-height-1' : 'purchase-amount font-size12' ">
@@ -406,8 +404,6 @@
                       </ng-container>
                       {{ projectDetails.purchaseOrderCost | number: "1.2-2" }}
                     </span>
-
-                    <!-- <span class="font-size12 purchase-amount max-width-96 word-break-word"> ₹ 6,54,354,35,464 </span> -->
                   </div>
 
                 </div>
