--- a/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
+++ b/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
@@ -45,8 +45,8 @@
                   (keydown)="$event.stopPropagation()"
                 />
                 <button mat-button matSuffix mat-icon-button>
-                  <mat-icon>search</mat-icon></button
-                >align
+                  <mat-icon>search</mat-icon>
+                </button>
               </div>
               <!-- <mat-select-trigger>
                     <mat-label>Select Supplier</mat-label>
